HTML markdown upgraded. Added icons.

--- a/src/main/resources/static/html/about.html
+++ b/src/main/resources/static/html/about.html
@@ -1,17 +1,19 @@
-<div class="container-fluid light">
-    <div class="page-header">
+<article class="container-fluid light">
+    <header class="page-header">
         <h3>Section under construction...</h3>
-    </div>
-    <blockquote>
-        <p>I have always wished for my computer to be as easy to use as my telephone; my wish has come true because I can no longer figure out how to use my telephone.</p>
-        <footer><abbr title="https://en.wikiquote.org/wiki/Bjarne_Stroustrup">Bjarne Stroustrup</abbr></footer>
-    </blockquote>
-    <blockquote class="blockquote-reverse">
-        <p>Most of you are familiar with the virtues of a programmer. There are three, of course: laziness, impatience, and hubris.</p>
-        <footer><abbr title="https://en.wikiquote.org/wiki/Larry_Wall">Larry Wall</abbr></footer>
-    </blockquote>
-    <blockquote>
-        <p>Programming is like sex. One mistake and you have to support it to the end of your life.</p>
-        <footer>Michael Sinz</footer>
-    </blockquote>
-</div>
+    </header>
+    <section>
+        <blockquote>
+            <p>I have always wished for my computer to be as easy to use as my telephone; my wish has come true because I can no longer figure out how to use my telephone.</p>
+            <footer><abbr title="https://en.wikiquote.org/wiki/Bjarne_Stroustrup">Bjarne Stroustrup</abbr></footer>
+        </blockquote>
+        <blockquote class="blockquote-reverse">
+            <p>Most of you are familiar with the virtues of a programmer. There are three, of course: laziness, impatience, and hubris.</p>
+            <footer><abbr title="https://en.wikiquote.org/wiki/Larry_Wall">Larry Wall</abbr></footer>
+        </blockquote>
+        <blockquote>
+            <p>Programming is like sex. One mistake and you have to support it to the end of your life.</p>
+            <footer>Michael Sinz</footer>
+        </blockquote>
+    </section>
+</article>
