--- a/src/main/resources/static/html/contact.html
+++ b/src/main/resources/static/html/contact.html
@@ -1,10 +1,12 @@
-<div class="container-fluid light">
-    <div class="page-header">
+<article class="container-fluid light">
+    <header class="page-header">
         <h3>Contact information</h3>
-    </div>
-    <p class="lead">
-        If you have a question about... you know... something, please feel free to ask me.
-    </p>
-    <p>I'm online most part of a day.</p>
-    <p><mark>Skype</mark>: <code>armored-2011</code></p>
-</div>
+    </header>
+    <section>
+        <p class="lead">
+            If you have a question about... you know... something, please feel free to ask me.
+        </p>
+        <p>I'm online most part of day.</p>
+        <p><i class="icon-skype fa-lg"></i>&nbsp;&nbsp;<code>armored-2011</code></p>
+    </section>
+</article>
