--- a/src/main/resources/static/html/home.html
+++ b/src/main/resources/static/html/home.html
@@ -1,20 +1,26 @@
-<div class="container-fluid light">
-    <div class="page-header">
+<article class="container-fluid light">
+    <header class="page-header">
         <h3>Testing area for a new functionality</h3>
-    </div>
+    </header>
     <br>
-    <dl>
-        <dt>
-            <a class="custom-ref" methods="get" href="/test?id=1" title="Отправить тестовый запрос">/test[?id=some_number]</a>
-        </dt>
-        <dd>возвращает ответ на тестовый запрос</dd>
-        <dt>
-            <a class="custom-ref" methods="get" href="/greeting?name=some_name" title="Запросить приветствие">/greeting[?name=some_name]</a>
-        </dt>
-        <dd>возвращает json-приветствие со счётчиком запросов (значение параметра id)</dd>
-        <dt>
-            <a class="custom-ref" methods="get" href="/detect-device" title="Определить тип устройства">/detect-device</a>
-        </dt>
-        <dd>возвращает информацию об устройстве, с которого был отправлен запрос</dd>
-    </dl>
-</div>
+    <section>
+        <dl>
+            <dt>
+                <a class="custom-ref" methods="get" href="/test?id=1" title="Отправить тестовый запрос">/test[?id=some_number]</a>
+            </dt>
+            <dd>возвращает ответ на тестовый запрос</dd>
+            <dt>
+                <a class="custom-ref" methods="get" href="/greeting?name=some_name" title="Запросить приветствие">/greeting[?name=some_name]</a>
+            </dt>
+            <dd>возвращает json-приветствие со счётчиком запросов (значение параметра id)</dd>
+            <dt>
+                <a class="custom-ref" methods="get" href="/detect-device" title="Определить тип устройства">/detect-device</a>
+            </dt>
+            <dd>возвращает информацию об устройстве, с которого был отправлен запрос</dd>
+        </dl>
+        <div class="fa-stack">
+            <i class="fa fa-bug fa-stack-1x"></i>
+            <i class="fa fa-ban fa-stack-2x"></i>
+        </div>
+    </section>
+</article>
