--- a/src/main/resources/static/html/hello.html
+++ b/src/main/resources/static/html/hello.html
@@ -1,9 +1,11 @@
-<div class="container-fluid light">
-    <div class="page-header">
+<article class="container-fluid light">
+    <header class="page-header">
         <h3>Hello</h3>
-    </div>
-    <label>Name:</label>
-    <input type="text" ng-model="yourName" placeholder="Enter a name here">
-    <br>
-    <h4>Hello, {{yourName}}!</h4>
-</div>
+    </header>
+    <section>
+        <label>Name:</label>
+        <input type="text" ng-model="yourName" placeholder="Enter a name here">
+        <br>
+        <h4>Hello, {{yourName}}!</h4>
+    </section>
+</article>
