--- a/src/main/resources/static/html/tags.html
+++ b/src/main/resources/static/html/tags.html
@@ -1,20 +1,80 @@
-<ul class="nav nav-pills nav-stacked col-md-1">
-    <li><a href="#" data-target="#tag-input" data-toggle="pill">&lang;input&rang;</a></li>
-    <li><a href="#" data-target="#tag-form" data-toggle="pill">&lang;form&rang;</a></li>
-</ul>
-<div class="tab-content">
-    <div class="container light">
-        <h3 class="page-header">Learning the behavior of tags.</h3>
-    </div>
-    <div id="tag-input" class="tab-pane fade container well">
-        <p class="lead">Attribute <code>type</code></p>
-        <dl>
-            <dt>color</dt>
-            <dd><input type="color"></dd>
-        </dl>
-    </div>
-    <div id="tag-form" class="tab-pane fade container well">
-        <label>...</label>
-    </div>
-</div>
-</div>
+<article>
+    <section>
+        <ul class="nav nav-pills nav-stacked col-md-1">
+            <li><a href="#" data-target="#tag-form" data-toggle="pill">&lang;form&rang;</a></li>
+            <li><a href="#" data-target="#tag-input" data-toggle="pill">&lang;input&rang;</a></li>
+            <li><a href="#" data-target="#tag-select" data-toggle="pill">&lang;select&rang;</a></li>
+        </ul>
+    </section>
+    <section class="tab-content">
+        <!--<header class="container light">-->
+            <!--<h3 class="page-header">Learning the behavior of tags.</h3>-->
+        <!--</header>-->
+        <div id="tag-form" class="tab-pane fade container well">
+            <label>...</label>
+        </div>
+        <div id="tag-input" class="tab-pane fade container well">
+            <p class="lead">Attribute <code>type</code></p>
+            <dl>
+                <dt>button</dt>
+                <dd><input type="button" value="Button"></dd>
+                <dt><label for="checkbox-test">checkbox</label></dt>
+                <dd><label><input id="checkbox-test" type="checkbox">Я согласен с условиями</label></dd>
+                <dt>color</dt>
+                <dd><input type="color"></dd>
+                <dt>date</dt>
+                <dd><input type="date"></dd>
+                <dt>datetime</dt>
+                <dd><input type="datetime"></dd>
+                <dt>datetime-local</dt>
+                <dd><input type="datetime-local"></dd>
+                <dt>email</dt>
+                <dd><input type="email"></dd>
+                <dt>file</dt>
+                <dd><input type="file"></dd>
+                <dt>hidden</dt>
+                <dd><input type="hidden"></dd>
+                <dt>image</dt>
+                <dd><input type="image"></dd>
+                <dt>month</dt>
+                <dd><input type="month"></dd>
+                <dt>number</dt>
+                <dd><input type="number"></dd>
+                <dt>password</dt>
+                <dd><input type="password"></dd>
+                <dt>radio</dt>
+                <dd><input type="radio" name="radio-test"></dd>
+                <dd><input type="radio" name="radio-test"></dd>
+                <dt>range</dt>
+                <dd><input type="range" min="0" max="100" step="1" value="30"></dd>
+                <dt>reset</dt>
+                <dd><input type="reset"></dd>
+                <dt>search</dt>
+                <dd><input type="search"></dd>
+                <dt>submit</dt>
+                <dd><input type="submit"></dd>
+                <dt>tel</dt>
+                <dd><input type="tel" autocomplete="on" placeholder="+7(___)___-__-__" pattern="+7\([0-9]{3}\)-[0-9]{3}-[0-9]{2}-[0-9]{2}"></dd>
+                <dt>text</dt>
+                <dd><input type="text"></dd>
+                <dt>time</dt>
+                <dd><input type="time"></dd>
+                <dt>url</dt>
+                <dd><input type="url"></dd>
+                <dt>week</dt>
+                <dd><input type="week"></dd>
+            </dl>
+        </div>
+        <div id="tag-select" class="tab-pane fade container well">
+            <p class="lead">Attribute <code>multiple</code></p>
+            <label>Какими браузерами вы пользуетесь?</label>
+            <select multiple>
+                <option>Google Chrome</option>
+                <option>Internet Explorer</option>
+                <option>Mozilla Firefox</option>
+                <option>Opera</option>
+                <option>Safari</option>
+            </select>
+        </div>
+    </section>
+</article>
