--- a/src/main/resources/static/html/todolist.html
+++ b/src/main/resources/static/html/todolist.html
@@ -1,6 +1,6 @@
-<div class="container-fluid light">
-    <div class="page-header">
+<article class="container-fluid light">
+    <header class="page-header">
         <h3>ToDo List</h3>
-    </div>
+    </header>
     ...
-</div>
+</article>
